<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ArtistDetailFragment">

        <TextView
            android:id="@+id/name_key_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:lineSpacingExtra="20sp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:text="@string/name_key"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nati_key_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:lineSpacingExtra="20sp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:text="@string/nationality_key"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/name_key_text"
            app:layout_constraintTop_toBottomOf="@+id/name_key_text" />

        <TextView
            android:id="@+id/birth_key_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:lineSpacingExtra="20sp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:text="@string/birthday_key"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/nati_key_text"
            app:layout_constraintTop_toBottomOf="@+id/nati_key_text" />

        <TextView
            android:id="@+id/death_key_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:lineSpacingExtra="20sp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:text="@string/deathday_key"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/birth_key_text"
            app:layout_constraintTop_toBottomOf="@+id/birth_key_text" />

        <TextView
            android:id="@+id/bio_key_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:lineSpacingExtra="20sp"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:text="@string/biography_key"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/death_key_text"
            app:layout_constraintTop_toBottomOf="@+id/death_key_text" />

        <TextView
            android:id="@+id/name_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/name_key_text"
            app:layout_constraintStart_toEndOf="@+id/name_key_text" />

        <TextView
            android:id="@+id/nati_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/nati_key_text"
            app:layout_constraintStart_toStartOf="@+id/name_value_text"
            app:layout_constraintTop_toBottomOf="@+id/name_value_text" />

        <TextView
            android:id="@+id/birth_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/birth_key_text"
            app:layout_constraintStart_toStartOf="@+id/name_value_text"
            app:layout_constraintTop_toBottomOf="@+id/nati_value_text" />

        <TextView
            android:id="@+id/death_value_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/death_key_text"
            app:layout_constraintStart_toStartOf="@+id/name_value_text"
            app:layout_constraintTop_toBottomOf="@+id/birth_value_text" />

        <TextView
            android:id="@+id/bio_value_text"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="50dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:textAlignment="viewStart"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/name_value_text"
            app:layout_constraintTop_toBottomOf="@+id/death_value_text"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>